--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^4.2.1",
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
         "eslint": "^8.40.0",
         "eslint-plugin-vue": "^9.12.0",
         "laravel-vite-plugin": "^0.7.5",
+        "postcss": "^8.4.23",
         "tailwindcss": "^3.3.2",
         "vite": "^4.0.0",
         "vue": "^3.2.47"
