--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/vue3": "^1.0.6",
+        "lodash": "^4.17.21",
         "nprogress": "^0.2.0"
     }
 }
